# xz-demo

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
samples/: README.md
samples/build_system/: Makefile.am  configure.ac  safe_m4_macro.m4
samples/clean_project/: Makefile  main.c
samples/git_history/: mock_commits.json
samples/source_files/: ifunc_example.c  interpose_example.c
src/xz_bot/: __init__.py  __main__.py  cli.py
src/xz_bot/common/: models.py
src/xz_bot/scanner/: agent_base.py  orchestrator.py  report.py  scoring.py
src/xz_bot/scanner/agents/: backdoor.py  obfuscation.py  social_eng.py  supply_chain.py
src/xz_bot/scanner/rules/: signatures.py
src/xz_bot/simulator/: build_injection.py  engine.py  ifunc_hijack.py  payload_extraction.py  social_engineering.py  stages.py  timeline.py  unauthorized_access.py
src/xz_bot/tui/: app.py
src/xz_bot/tui/screens/: scanner_screen.py  timeline_screen.py  walkthrough.py  welcome.py
src/xz_bot/tui/styles/: app.tcss
src/xz_bot/tui/widgets/: risk_gauge.py  stage_panel.py
src/xz_bot/web/: app.py  routes.py
src/xz_bot/web/static/css/: dashboard.css
src/xz_bot/web/static/js/: dashboard.js
src/xz_bot/web/templates/: dashboard.html
